开始写爬取歌单的接口

--- a/src/main/resources/local/jdbc.properties
+++ b/src/main/resources/local/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mysql://127.0.0.1:3306/crawler?autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://127.0.0.1:3306/crawler?autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useUnicode=true&characterEncoding=utf8mb4
 jdbc.username=root
 jdbc.password=1qaz!QAZ666
 jdbc.initialSize=10
