--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
             <version>2.0.0</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -195,6 +195,11 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.netease.kaola</groupId>
+            <artifactId>cs-utils</artifactId>
+            <version>1.0.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
@@ -262,12 +267,20 @@
                 <version>1.3.2</version>
                 <configuration>
                     <configurationFile>src/main/resources/mybatis/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite>
                 </configuration>
                 <dependencies>
+                    <!-- mybatis-generator-core带上才能生成MapperExt -->
                     <dependency>
                         <groupId>org.mybatis.generator</groupId>
                         <artifactId>mybatis-generator-core</artifactId>
                         <version>2.0.0</version>
+                    </dependency>
+                    <!-- cs-utils有分页信息，这样引用才能使用分页插件MybatisPaginationPlugin -->
+                    <dependency>
+                        <groupId>com.netease.kaola</groupId>
+                        <artifactId>cs-utils</artifactId>
+                        <version>1.0.2-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
             </plugin>
