--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,19 @@
             <version>19.0</version>
         </dependency>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.netease.kaola</groupId>
             <artifactId>cs-utils</artifactId>
             <version>1.0.2-SNAPSHOT</version>
