--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <spring.version>4.3.0.RELEASE</spring.version>
+        <spring.version>4.3.24.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -207,7 +207,11 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.14</version>
+        </dependency>
         <dependency>
             <groupId>com.netease.kaola</groupId>
             <artifactId>cs-utils</artifactId>
