--- a/pom.xml
+++ b/pom.xml
@@ -292,7 +292,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <webXml>web\WEB-INF\web.xml</webXml>
+<!--                    <webappDirectory>${baseDir}/web</webappDirectory>-->
+                    <warSourceDirectory>web</warSourceDirectory>
+                    <webXml>web/WEB-INF/web.xml</webXml>
                 </configuration>
             </plugin>
         </plugins>
