--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,11 @@
             <version>19.0</version>
         </dependency>
         <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.7.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.netease.kaola</groupId>
             <artifactId>cs-utils</artifactId>
             <version>1.0.2-SNAPSHOT</version>
