Revert "增加停用词"
This reverts commit e6342842

--- a/src/main/resources/local/hanlp.properties
+++ b/src/main/resources/local/hanlp.properties
@@ -12,7 +12,7 @@ root=D:/NLP/
 #所有词典统一使用UTF-8编码，每一行代表一个单词，格式遵从[单词] [词性A] [A的频次] [词性B] [B的频次] ... 如果不填词性则表示采用词典的默认词性。
 CustomDictionaryPath=data/dictionary/custom/CustomDictionary.txt; 现代汉语补充词库.txt; 全国地名大全.txt ns; 人名词典.txt; 机构名词典.txt; 上海地名.txt ns;data/dictionary/person/nrf.txt nrf;
 #停用词词典路径
-CoreStopWordDictionaryPath=data/stopwords/baidu.txt
+CoreStopWordDictionaryPath=D:/NLP/stopwords/百度停用词表.txt
 #同义词词典路径
 #CoreSynonymDictionaryDictionaryPath=data/dictionary/synonym/CoreSynonym.txt
 #人名词典路径
